# parquet-ruby

./: .envrc  .gitignore  ARCH.md  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  flake.nix  overlay.nix  parquet.gemspec  run_memory_tests.sh
.github/: FUNDING.yml
.github/workflows/: gem-push.yml  ruby.yml
benchmark/: benchmark.sh  benchmark_memory.rb  benchmark_streaming.rb  comparison_benchmark.rb  profile.sh  ruby_profiling_script.rb
ext/parquet/: Cargo.toml  extconf.rb
ext/parquet-core/: Cargo.toml
ext/parquet-core/src/: arrow_conversion.rs  error.rs  lib.rs  reader.rs  schema.rs  test_utils.rs  value.rs  writer.rs
ext/parquet-core/src/traits/: mod.rs  schema.rs
ext/parquet-core/tests/: arrow_conversion_tests.rs  binary_data.rs  column_projection.rs  complex_types.rs  compression_tests.rs  concurrent_access.rs  decimal_tests.rs  edge_cases_corner_cases.rs  error_handling_comprehensive_tests.rs  null_handling_tests.rs  performance_memory.rs  primitive_types.rs  real_world_patterns.rs  roundtrip_correctness.rs  schema_comprehensive_tests.rs  temporal_tests.rs  test_helpers.rs  writer_tests.rs
ext/parquet-ruby-adapter/: Cargo.toml  build.rs
ext/parquet-ruby-adapter/examples/: try_into_value_demo.rs
ext/parquet-ruby-adapter/src/: batch_manager.rs  chunk_reader.rs  converter.rs  error.rs  io.rs  lib.rs  logger.rs  metadata.rs  reader.rs  schema.rs  string_cache.rs  try_into_value.rs  types.rs  utils.rs  writer.rs
ext/parquet/src/: adapter_ffi.rs  enumerator.rs  header_cache.rs  lib.rs  logger.rs  parquet_row_reader.rs  reader.rs  ruby_integration.rs  ruby_reader.rs  types.rs  utils.rs
ext/parquet/src/reader/: arrow_reader.rs  common.rs  format_detector.rs  mod.rs  parquet_column_reader.rs  parquet_row_reader.rs
ext/parquet/src/reader/unified/: mod.rs
ext/parquet/src/types/: core_types.rs  mod.rs  parquet_value.rs  record_types.rs  schema_converter.rs  schema_node.rs  timestamp.rs  type_conversion.rs  writer_types.rs
ext/parquet/src/writer/: mod.rs  write_columns.rs  write_rows.rs
lib/: parquet.rb  parquet.rbi
lib/parquet/: schema.rb  version.rb
test/: 3-byte-decimal.parquet  aggressive_gc_test.rb  arrow_test.rb  basic_test.rb  big-decimal.parquet  binary.parquet  column_test.rb  complex.parquet  complex_types_test.rb  data.parquet  date_format_test.rb  decimal.parquet  decimal_precision_test.rb  decimal_test.rb  dynamic_batch_test.rb  empty_table.parquet  enumerator_test.rb  error_test.rb  float_precision_test.rb  gc_test.rb  logger_test.rb  memory_usage_test.rb  nested_data.arrow  numeric.parquet  reader_gc_test.rb  repeated_cols.parquet  row_test.rb  schema_test.rb  snowflake_export.parquet  streaming_test.rb  string_cache_test.rb  test_data.arrow  test_helper.rb  threadsafe_reader_test.rb  timezone_test.rb  uuid.parquet  uuid_test.rb
