[package]
name = "parquet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
arrow-array = "54.0.0"
arrow-schema = "54.0.0"
bytes = "^1.9"
itertools = "^0.14"
jiff = "0.1.19"
magnus = { version = "0.7", features = ["rb-sys"] }
parquet = { version = "^54.0", features = ["json", "object_store"] }
rb-sys = "^0.9"
thiserror = "2.0"
tempfile = "^3.15"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[target.'cfg(not(any(target_os = "linux", target_os = "windows")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
