[package]
name = "parquet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
rb-sys-env = "^0.2"

[dependencies]
ahash = "0.8"
arrow-array = { git = "https://github.com/njaremko/arrow-rs", branch = "nathan/fix-time" }
arrow-buffer = { git = "https://github.com/njaremko/arrow-rs", branch = "nathan/fix-time" }
arrow-ipc = { git = "https://github.com/njaremko/arrow-rs", branch = "nathan/fix-time", features = ["lz4"] }
arrow-schema = { git = "https://github.com/njaremko/arrow-rs", branch = "nathan/fix-time" }
bytes = "^1.9"
either = "1.9"
itertools = "^0.14"
jiff = "0.2"
magnus = { version = "0.7", features = ["rb-sys"] }
parquet = { git = "https://github.com/njaremko/arrow-rs", branch = "nathan/fix-time", features = ["json"] }
rand = "0.9"
rb-sys = "^0.9"
simdutf8 = "0.1.5"
tempfile = "^3.15"
thiserror = "2.0"
num = "0.4.3"
uuid = "1.16.0"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[target.'cfg(not(any(target_os = "linux", target_os = "windows")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
